test: add unit tests for services, validators and validator factory